<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
<!--	<parent>-->
<!--		<groupId>org.springframework.boot</groupId>-->
<!--		<artifactId>spring-boot-starter-parent</artifactId>-->
<!--		<version>3.2.5</version>-->
<!--		<relativePath />-->
<!--	</parent>-->

	<groupId>com.shaqueiq</groupId>
	<artifactId>arcadedb-demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>arcadedb-demo</name>
	<description>Demo ArcadeDB and AxonIQ</description>

	<properties>
		<java.version>21</java.version>
		<axon.version>4.9.3</axon.version>
<!--		<axon.version>4.0</axon.version>-->
<!--		<spring.version>5.2.7.RELEASE</spring.version>-->
<!--		<spring.boot.version>2.4.12</spring.boot.version>-->
		<spring.boot.version>3.2.5</spring.boot.version>
<!--		<spring.version>5.3.18</spring.version>-->
<!--		https://stackoverflow.com/questions/72085721/correct-the-classpath-of-your-application-so-that-it-contains-compatible-version-->
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.axonframework</groupId>
			<artifactId>axon-spring-boot-starter</artifactId>
			<version>${axon.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>

		<dependency>
			<!--			org.springframework.boot:spring-boot-starter-test:jar:3.2.5:test-->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring.boot.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.arcadedb</groupId>
			<artifactId>arcadedb-engine</artifactId>
			<version>24.4.1</version>
		</dependency>

		<dependency>
			<groupId>com.arcadedb</groupId>
			<artifactId>arcadedb-network</artifactId>
			<version>24.4.1</version>
		</dependency>


<!--		<dependency>-->
<!--			<groupId>org.projectlombok</groupId>-->
<!--			<artifactId>lombok</artifactId>-->
<!--			<version>1.18.32</version>-->
<!--			<scope>annotationProcessor</scope>-->
<!--		</dependency>-->

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>3.1.11</version>
<!--				<version>${spring.boot.version}</version>-->
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
	</build>

	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>https://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

	</repositories>

</project>
